--- a/AnimationDemo/AppConfig/Info.plist
+++ b/AnimationDemo/AppConfig/Info.plist
@@ -24,6 +24,12 @@
 	<string>访问您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>访问您的相册</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>wwqj.ttc</string>
+		<string>kittywwt.ttf</string>
+		<string>PingFang.ttc</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
